static/styles/home.css
.info-box {
    top: 58px;
    height: 91vh;
    width: 95%;
    flex-direction: column;
}

.mag-title{
    text-align: center;
    text-decoration:none;
    color:black !important;
}

.mag-title:hover {
    color: #2F52E0 !important;
    transition: color 0.1s ease
}

.mag-box {
    min-height: 100px;
    display:flex;
}

.about {
    display:flex;
    justify-content:space-between;
}

.logo-tag {
    width: auto;
    float: right;
}

.info {
    overflow-y:auto;
}

.issues {
    flex-grow: 1;
}

.issue-link {
    text-align: center;
    text-decoration: none;
    color: black;
}

.issue-link:hover {
    color: #2F52E0;
    transition: color 0.1s ease
}

.yellow {
    color: #2F52E0 !important;
}

.accordion {
    flex-direction:column;
    justify-content:center;
    align-content:space-between;
    height: 100%;
}

.accordion-item {
    display: flex;
    align-content: center;
    justify-content:center;
    flex-direction:column;
    background-color: #E8E5E2 !important;
    margin-bottom: 0px;
    width: 100%;
    min-height: 90px;
    border:0 !important;
}

.accordion-link {
    text-align:center;
    text-decoration: none;
    color: black;
    width: 100%;
}

.answer{
    text-align:center;
    max-height:0;
    overflow: hidden;
    position:relative; 
    transition: max-height 200ms ease;
}

.accordion-item:target .answer {
    max-height: 90vh;
    overflow-y: auto;
    padding: 15pt;
    border-top: 1px solid black;
    border-bottom: 1px solid black;
}

.accordion-item:target .accordion-link {
    padding: 15pt;
    color: #2F52E0;
}

.login {
    display:flex;
    align-items:center;
    justify-content:center;
    height:90px;
    margin-bottom:20px;
}

.lin {
    color: #2F52E0;
}

.lin:hover {
    color: gray;
}

.lout {
    color: gray;
}

.issue-box {
    margin: 0;
    width: 100%;
    justify-content:space-between;
}

.issue-header{
    display:flex;
    min-height:100px;
    border-bottom:1px solid black;
    align-items:center;
}

.issue-header div {
    display:flex;
    flex-direction:column;
    align-content:start;
    margin: 15px;    
}

.favourite {
    height:30px !important;
    width:75% !important;
}

.issue-body {
    display:flex;
    align-items:start;
    max-height:52vh;
    overflow-y:auto;
}

.issue-body div {
    position: relative;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-content: start;
    padding: 15px;
}

.issue-buy {
    margin-top:15px;
    display:flex;
    align-items:center;
    justify-content:center;
    border-top: 1px solid black;
    height:100px;
}

.issue-buy div {
    padding: 15px;
    display:flex;
    justify-content:space-around;
    width:70%;
}

body{
    overflow-x:hidden;
}

#mainbox {
    flex-direction:column;
    min-height: 94vh;
    height:auto;
}

@media only screen and (max-width: 470px) {

    .logo-tag {
        display:none !important;
    }

}

